src/test/ui/parser/extern-expected-fn-or-brace.stderr
error: expected one of `fn` or `{`, found keyword `mod`
  --> $DIR/extern-expected-fn-or-brace.rs:4:12
   |
LL | extern "C" mod foo;
   |            ^^^ expected one of `fn` or `{`

error: aborting due to previous error

